<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fr.skynex.vaultx</groupId>
        <artifactId>VaultX-Parent</artifactId>
        <version>1.1.3</version>
    </parent>

    <artifactId>VaultX-Core</artifactId>
    <name>VaultX-Core</name>
    <description>Core plugin implementation of VaultX for Bukkit/Spigot/Paper servers.</description>

    <dependencies>
        <!-- VaultX API Module -->
        <dependency>
            <groupId>fr.skynex.vaultx</groupId>
            <artifactId>VaultX-API</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Legacy Spigot API for 1.8 compatibility -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Standard Vault API to be shaded -->
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${api.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Modern bStats metrics -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>

        <!-- Redis integration for multi-server sync -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- PlaceholderAPI dependency -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- Skript Dependency -->
        <dependency>
            <groupId>com.github.SkriptLang</groupId>
            <artifactId>Skript</artifactId>
            <version>2.6.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- HikariCP for high-performance connection pool -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>VaultX</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>messages.yml</include>
                    <include>gui.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <include>fr.skynex.vaultx:VaultX-API</include>
                            <include>net.milkbowl.vault:VaultAPI</include>
                            <include>org.bstats:*</include>
                            <include>redis.clients:jedis</include>
                            <include>org.apache.commons:commons-pool2</include>
                            <include>org.json:*</include>
                            <include>com.zaxxer:HikariCP</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>net.milkbowl.vault.metrics</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>redis.clients.jedis</pattern>
                            <shadedPattern>net.milkbowl.vault.redis</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>net.milkbowl.vault.hikari</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
